<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="523dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="524dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling,TextSizeCheck,VisualLintBounds">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/first_name"
                android:textColor="@color/colorBlue"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/InputFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_584"
                android:ems="10"
                android:hint="@string/stefan"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/last_name"
                android:textColor="@color/colorBlue"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/InputLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_584"
                android:hint="@string/jovanovic"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/email"
                android:textColor="@color/colorBlue"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/InputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_584"
                android:ems="10"
                android:hint="@string/example_gmail_com"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/password"
                android:textColor="@color/colorBlue"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/InputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_584"
                android:hint="@string/passwordFill"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/rectangle_586"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/colorBlue"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.361"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.482" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/colorRed"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.053"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.50" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>